Fixed image link lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>    
 <h1>Lasagna</h1>
-<img href="images/lasagna-photo.jpg">
+<img src="images/lasagna-photo.jpg" width="400" height="200" alt="lasagna">
 <h2>Description</h2>
 <p>This is a perfect lasagna recipe for the holidays</p>
 <p>It can be prepared ahead of time and you can even freeze any leftovers.</p>
