Fixed image link side.html

--- a/recipes/side.html
+++ b/recipes/side.html
@@ -7,7 +7,7 @@
 </head>
 <body>    
 <h1>Side</h1>
-<img href="images/side.jpg">
+<img src="images/side.jpg" width="400" height="200" alt="side dish">
 <h2>Description</h2>
 <p>This is a great side dish to go with the lasagna</p>
 <p>Your guests will love it</p>
